// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Identification Identification should match snapshot 1`] = `
<Formik
  initialValues={Object {}}
  onSubmit={[Function]}
>
  <Component />
</Formik>
`;

exports[`Identification renderFormHandler should match snapshot when DISABLED false 1`] = `
<div>
  <Form>
    <Connect(Component)
      id="typeId"
      labelText="ID Type"
      name="typeId"
    />
    <Component
      id="details"
      labelText="ID Reference"
      name="details"
      placeholder="ID Reference"
      required={true}
      type="text"
    />
    <Component
      id="expiry"
      labelText="Expiry Date"
      name="expiry"
      required={true}
    />
    <Component
      allowClear={true}
      id="fileUrl"
      inputProps={
        Object {
          "disabled": false,
        }
      }
      labelText="Upload File"
      name="fileUrl"
      required={true}
    />
    <div
      className="field pb-2"
    >
      <div
        className="columns undefined"
      >
        <div
          className="column"
        >
          <div
            className="undefined flex items-center"
          >
            <span>
              RPS Ref:
            </span>
            <span
              className="ml-1"
            >
              AYL19000001
            </span>
          </div>
        </div>
        <div
          className="column undefined"
        >
          <Component
            className="mr-2"
            disabled={false}
            loading={false}
            type="submit"
            variant="primary"
          >
            Save
          </Component>
          <Component
            className="mr-2"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            Previous
          </Component>
          <Component
            disabled={false}
            type="button"
            variant="primary"
          >
            Next
          </Component>
        </div>
      </div>
    </div>
    <p
      className="is-size-6"
    >
      * Indicates fields that are required in order to ‘Complete’ this section.
    </p>
  </Form>
</div>
`;

exports[`Identification renderFormHandler should match snapshot when DISABLED true 1`] = `
<div>
  <p
    className="mb-4"
  >
    *Please ensure the Primary ID has been completed before adding a Secondary ID
  </p>
  <Form>
    <Connect(Component)
      id="typeId"
      labelText="ID Type"
      name="typeId"
    />
    <Component
      id="details"
      labelText="ID Reference"
      name="details"
      placeholder="ID Reference"
      required={true}
      type="text"
    />
    <Component
      id="expiry"
      labelText="Expiry Date"
      name="expiry"
      required={true}
    />
    <Component
      allowClear={true}
      id="fileUrl"
      inputProps={
        Object {
          "disabled": true,
        }
      }
      labelText="Upload File"
      name="fileUrl"
      required={true}
    />
    <div
      className="field pb-2"
    >
      <div
        className="columns undefined"
      >
        <div
          className="column"
        >
          <div
            className="undefined flex items-center"
          >
            <span>
              RPS Ref:
            </span>
            <span
              className="ml-1"
            >
              AYL19000001
            </span>
          </div>
        </div>
        <div
          className="column undefined"
        >
          <Component
            className="mr-2"
            disabled={true}
            loading={false}
            type="submit"
            variant="primary"
          >
            Save
          </Component>
          <Component
            className="mr-2"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            Previous
          </Component>
          <Component
            disabled={true}
            type="button"
            variant="primary"
          >
            Next
          </Component>
        </div>
      </div>
    </div>
    <p
      className="is-size-6"
    >
      * Indicates fields that are required in order to ‘Complete’ this section.
    </p>
  </Form>
</div>
`;
